--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "classnames": "2.2.6",
     "headroom.js": "0.11.0",
     "moment": "2.24.0",
+    "node-sass": "^4.14.1",
     "nouislider": "14.1.1",
     "react": "16.12.0",
     "react-datetime": "2.16.3",
@@ -65,7 +66,7 @@
     "eslint-plugin-flowtype": "3.13.0",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
-    "jquery": "3.4.1",
+    "jquery": "^3.6.0",
     "typescript": "3.7.5"
   }
 }
